--- a/package.json
+++ b/package.json
@@ -17,19 +17,66 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "schema.format:base": "prisma format --schema=./src/common/prisma/schema.prisma",
+    "schema.format:company": "prisma format --schema=./src/common/prisma/company/schema.prisma",
+    "schema.format:all": "npm run schema.format:base && npm run schema.format:company",
+    "schema.generate:base": "prisma generate --schema=./src/common/prisma/schema.prisma",
+    "schema.generate:company": "prisma generate --schema=./src/common/prisma/company/schema.prisma",
+    "schema.generate:all": "npm run schema.generate:base && npm run schema.generate:company",
+    "db.seed:base": "ts-node ./src/common/prisma/seed.ts",
+    "db.seed:company": "ts-node ./src/common/prisma/seed-company.ts",
+    "db.seed.runner:base": "ts-node ./src/common/prisma/seed-runner.ts",
+    "db.seed.runner:company": "ts-node ./src/common/prisma/seed-runner-company.ts",
+    "db.migration.apply:companies": "ts-node ./src/common/prisma/migrate-company.ts",
+    "db.migration.run:base": "npx prisma migrate deploy --schema=./src/common/prisma/schema.prisma",
+    "db.migration.run:company": "npx prisma migrate deploy --schema=./src/common/prisma/company/schema.prisma",
+    "db.migration.create:base": "npx prisma migrate dev --create-only --schema=./src/common/prisma/schema.prisma",
+    "db.migration.create:company": "npx prisma migrate dev --create-only --schema=./src/common/prisma/company/schema.prisma",
+    "migration:run": "prisma migrate deploy",
+    "migration:run:dev": "prisma migrate dev ",
+    "migration:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@nestjs/bull": "^10.1.1",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
+    "@prisma/client": "^5.16.1",
+    "args-parser": "^1.3.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "bull": "^4.15.0",
+    "cache-manager": "^5.6.1",
+    "cache-manager-redis-store": "2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
+    "express-basic-auth": "^1.2.1",
+    "google-libphonenumber": "^3.2.35",
+    "jwt-decode": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cache-manager-redis-store": "^2.0.4",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
