--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@ HOST_NAME=localhost
 CLIENT_URL=http://localhost:3001
 PORT=4000
 BASE_URL=http://${HOST_NAME}:${PORT}
+APP_CLIENT_FORGOT_PASSWORD_URL=
 
 DB_USER=onculture
 DB_PASSWORD=password
@@ -21,6 +22,8 @@ FROM_EMAIL="OnCulture <onculturetest@gmail.com>"
 
 JWT_SECRET=
 JWT_EXPIRATION_TIME=3000
+
+PASSWORD_RESET_EXPIRES=
 
 CLOUDINARY_NAME=
 CLOUDINARY_API_KEY=
