--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "google-libphonenumber": "^3.2.35",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "nanoid": "3.3.7",
     "nestjs-real-ip": "^3.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -84,6 +85,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.15",
