--- a/.env.sample
+++ b/.env.sample
@@ -25,9 +25,10 @@ JWT_EXPIRATION_TIME=3000
 
 PASSWORD_RESET_EXPIRES=
 
-CLOUDINARY_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_REGION=eu-west-2
+AWS_S3_ACCESS_KEY_SECRET=
+AWS_S3_BUCKET=onculture-dev
 
 AWS_S3_ACCESS_KEY_ID=
 AWS_S3_REGION=
