resolve issue with caching

--- a/.env.sample
+++ b/.env.sample
@@ -57,9 +57,10 @@ ZOOM_HOST_EMAIL=
 ZOOM_BASE_URL=https://api.zoom.us/v2/users/
 
 REDIS_PASSWORD=
-REDIS_CONTAINER_NAME=localhost
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_TTL=600
+REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}
 
 MAILER_EMAIL=
 MAILER_PASS=
