--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bull": "^4.15.0",
-    "cache-manager": "^5.6.1",
-    "cache-manager-redis-store": "2.0.0",
+    "cache-manager": "^5.7.6",
+    "cache-manager-redis-yet": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
