--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -53,6 +53,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.18.0",
     "@sendgrid/mail": "^8.1.3",
+    "@slack/web-api": "^7.5.0",
     "args-parser": "^1.3.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
