chore: update env

--- a/.env.sample
+++ b/.env.sample
@@ -44,9 +44,12 @@ SLACK_BOT_TOKEN=
 SLACK_APP_TOKEN=
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
-SLACK_CLIENT_SCOPE=app_mentions:read,calls:read,calls:write,channels:history,channels:manage,channels:read,chat:write,chat:write.public,commands,conversations.connect:write,groups:history,groups:write,im:history,im:read,im:write,mpim:history,mpim:write,users.profile:read,users:read,users:read.email,users:write
-SLACK_AUTH_URI_CALLBACK=
 SLACK_APP_ID=
+SLACK_CLIENT_SCOPE=channels:read,groups:read,channels:manage,chat:write
+SLACK_USER_SCOPE=,app_mentions:read,channels:manage,chat:write,chat:write.public,conversations.connect:write,groups:history,im:history,im:read,users:read,users:read.email,users:write
+
+SLACK_AUTH_URI_CALLBACK=
+SLACK_BASE_URL='https://slack.com/oauth/v2/authorize'
 
 CRYPTO_SECRET=
 
