--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/s3-presigned-post": "^3.658.1",
+    "@aws-sdk/s3-request-presigner": "^3.662.0",
     "@casl/ability": "^6.7.1",
     "@faker-js/faker": "^8.4.1",
     "@nestjs-modules/mailer": "^2.0.2",
