--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
     "express-basic-auth": "^1.2.1",
@@ -77,7 +78,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "puppeteer": "^22.13.0",
-    "reflect-metadata": "^0.2.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^10.0.0"
   },
