chore: sentry integration

--- a/.env.sample
+++ b/.env.sample
@@ -39,6 +39,9 @@ SANITY_PROJECT_ID=
 SANITY_DATASET=
 SANITY_API_VERSION=
 
+SENTRY_DSN=
+SENTRY_DEBUG=
+
 SLACK_SIGNING_SECRET=
 SLACK_BOT_TOKEN=
 SLACK_APP_TOKEN=
