--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/swagger": "^7.4.0",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.0",
+    "@sanity/client": "^6.22.1",
     "@sendgrid/mail": "^8.1.3",
     "@sentry/cli": "^2.37.0",
     "@sentry/nestjs": "^8.34.0",
@@ -109,7 +110,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
